<resources>
    <string name="app_name">Road Runner</string>
    //Login and Register and Password change
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //add car
    <string name="add_car">   Add Car</string>
    <string name="car_name">Car Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="numberplate">Number Plate</string>
    <string name="year">Year</string>
    <string name="fuel">Type of Fuel</string>
    <string name="capacity">Capacity</string>
    //add car

    //refueling
    <string name="odometer">Odometer Reading</string>
    <string name="price">Total Coast</string>
    <string name="ltrs">Litres</string>
    <string name="tank">Fill Tank</string>
    <string name="gas">Gas Station</string>
    <string name="reason">Reason</string>
    <string name="chk_android">Fill Tank</string>
    //refueling


    //expenses
    <string name="expense">Type of Expense</string>
    <string name="location"></string>
    <string name="value">Value</string>
    //expenses
    <string name="service">Type of Service</string>
    //services

    //services

    //Fragments
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="large_text"></string>
    <string name="action_settings">Settings</string>

</resources>