<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".VehicleActivity"
    tools:showIn="@layout/activity_vehicle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_car"
                android:drawablePadding="10dp"
                android:hint="@string/add_car"
                android:paddingTop="20dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_more"
                android:hint="@string/car_name"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/manufacturer"
                android:hint="@string/manufacturer"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_format"
                android:hint="@string/model"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:hint="@string/year"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_plate"
                android:hint="@string/numberplate"
                android:inputType="textPostalAddress" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/oil"
                android:hint="@string/fuel"
                android:inputType="textPostalAddress" />

            <EditText
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:hint="@string/capacity"
                android:inputType="textPostalAddress" />


        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>