<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ProgressBar
        android:id="@+id/progressBarAdd"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/odometer"
                android:hint="@string/odometer"
                android:singleLine="true" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp">


            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/gas"
                android:hint="@string/expense"
                android:inputType="textPostalAddress" />

            <EditText
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:hint="@string/value"
                android:inputType="textPostalAddress" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_format"
                android:textSize="19dp"
                android:text="Price"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:paddingTop="21dp"
                android:paddingLeft="10dp"
                android:hint="@string/ltrs"
                android:inputType="phone" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:paddingTop="21dp"
                android:hint="@string/price"
                android:inputType="textPostalAddress" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="10dp"
                android:paddingTop="20dp"
                android:text="Location"
                android:textColor="@color/colorBlack"
                android:textSize="19dp" />

            <CheckBox
                android:id="@+id/chkAndroid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:text="@string/chk_android" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_plate"
                android:hint="@string/reason"
                android:inputType="textPostalAddress" />


        </LinearLayout>



        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_sign_in"
            android:text="Enter"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>