<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBarSaveF"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edtOd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/odometer"
                android:drawablePadding="10dp"
                android:hint="@string/odometer"
                android:inputType="number"
                android:paddingTop="20dp"
                android:singleLine="true" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtFuelT"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/oil"
                android:drawablePadding="10dp"
                android:hint="@string/fuel"
                android:inputType="textCapWords"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/edtCapacityT"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:hint="Capacity (cc)"
                android:inputType="number"
                android:paddingTop="20dp" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="5dp">


            <EditText
                android:id="@+id/edtLitres"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_format"
                android:drawablePadding="10dp"
                android:hint="@string/ltrs"
                android:inputType="number"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/edtTotal"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:hint="@string/price"
                android:inputType="number"
                android:paddingTop="20dp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:paddingTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_whatshot"
                android:textSize="20dp"
                android:text="Fill Tank"
                android:textColor="@color/colorBlack"/>

            <CheckBox
                android:id="@+id/chkAndroid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:text="@string/chk_android"
                android:checked="true" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edtGasStation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_plate"
                android:drawablePadding="10dp"
                android:hint="@string/gas"
                android:inputType="textCapWords"
                android:paddingTop="20dp" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edtReason"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_more"
                android:drawablePadding="10dp"
                android:hint="@string/reason"
                android:inputType="textCapWords"
                android:paddingTop="20dp" />
        </LinearLayout>




        <Button
            android:id="@+id/btn_saveF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_sign_in"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>



</RelativeLayout>