<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ProgressBar
        android:id="@+id/progressBarAdd"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_car"
                android:drawablePadding="10dp"
                android:hint="Car Name"
                android:inputType="textCapWords"
                android:paddingTop="20dp"
                android:singleLine="true" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtMan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/manufacturer"
                android:drawablePadding="10dp"
                android:hint="@string/manufacturer"
                android:inputType="textCapWords"
                android:paddingTop="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtModel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_format"
                android:drawablePadding="10dp"
                android:hint="@string/model"
                android:inputType="text"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/edtYear"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtNoPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_plate"
                android:drawablePadding="10dp"
                android:hint="@string/numberplate"
                android:inputType="text"
                android:paddingTop="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtFuel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/oil"
                android:drawablePadding="10dp"
                android:hint="@string/fuel"
                android:inputType="textCapWords"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/edtCapacity"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:hint=" Capacity (cc)"
                android:inputType="number"
                android:paddingTop="20dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_addcar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_sign_in"
            android:text="Add Car"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
    </ScrollView>



</RelativeLayout>