<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ProgressBar
        android:id="@+id/progressBarSaveS"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="60dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <EditText
                android:id="@+id/edtOdS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/odometer"
                android:drawablePadding="10dp"
                android:hint="@string/odometer"
                android:inputType="number"
                android:paddingTop="20dp"
                android:singleLine="true" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:background="@color/white">


            <EditText
                android:id="@+id/edtServiceType"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_build"
                android:drawablePadding="10dp"
                android:hint="@string/service"
                android:inputType="textCapWords"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/edtCostS"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:hint="Cost"
                android:inputType="number"
                android:paddingTop="20dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="10dp"
                android:paddingTop="20dp"
                android:text="Location"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edtLocationS"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:inputType="textCapWords"
                android:paddingTop="20dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:background="@color/white">

            <EditText
                android:id="@+id/edtReasonS"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_plate"
                android:drawablePadding="10dp"
                android:hint="@string/reason"
                android:inputType="textCapSentences"
                android:paddingTop="20dp" />


        </LinearLayout>


        <Button
            android:id="@+id/btn_saveS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gradient_sign_in"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>


</RelativeLayout>